<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".News_Page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:gravity="center"
            android:text="@string/news_heading"
            android:textColor="#000000"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:text="@string/news_content" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:text="@string/news_content2" />

        <ImageView
            android:id="@+id/hotel_display_image"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            app:srcCompat="@drawable/wear_mask" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>