<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/booking_background"
    tools:context=".Hotel_detail_info_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/booking_background"
        tools:layout_editor_absoluteX="-169dp"
        tools:layout_editor_absoluteY="78dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hotel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/booking_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/design_default_color_on_secondary"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/hotel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_description"
                android:textColor="@android:color/background_dark" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/design_default_color_surface"
                app:cardCornerRadius="12dp"
                app:cardElevation="0px"
                app:cardUseCompatPadding="false">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/hotel_display_image"
                        android:layout_width="match_parent"
                        android:layout_height="288dp"
                        app:srcCompat="@drawable/hotel_room" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/Location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Location: "
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/view_hotel_button"
                            android:layout_width="203dp"
                            android:layout_height="wrap_content"
                            android:text="@string/view_hotel" />

                        <Button
                            android:id="@+id/view_room_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/view_room" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/hotel_link"
                        android:textColorLink="@color/colorPrimaryDark" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Enter the number of traveler(s):"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Adult"
                            android:textColor="@color/design_default_color_on_secondary" />

                        <EditText
                            android:id="@+id/numberOfAdult"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:gravity="center"
                            android:inputType="numberSigned"
                            android:text="0" />

                        <Button
                            android:id="@+id/adult_mins"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/mins"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/adult_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/add"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/childTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Child"
                            android:textColor="@color/design_default_color_on_secondary" />

                        <EditText
                            android:id="@+id/numberOfChild"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:gravity="center"
                            android:inputType="numberSigned"
                            android:text="0" />

                        <Button
                            android:id="@+id/child_mins"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/mins"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/child_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/add"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <TextView
                        android:id="@+id/total_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Total cost: $0 (in $HKD)"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/count_of_adult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Adult:$0"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/count_of_child"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Child:$0"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="24sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_hotel_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_key" />

                <Button
                    android:id="@+id/next_to_pay"
                    android:layout_width="323dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next_key" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>