<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".Home_Page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/booking_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/log_out_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="logout" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user_msg"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="12dp"
                app:cardElevation="0px"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="App Info"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <View
                        android:id="@+id/view8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/news"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/news" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/news_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/news_page_title"
                                android:textColor="@color/design_default_color_on_secondary"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="12dp"
                app:cardElevation="0px"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Find your hotel"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <View
                        android:id="@+id/view7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/view_booking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/view" />

                        <TextView
                            android:id="@+id/textView51"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="     " />

                        <ImageView
                            android:id="@+id/booking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/booking" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/booking_title"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:text="@string/view_booking_page_title"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="  " />

                        <TextView
                            android:id="@+id/view_booking_title"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="     Booking"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="12dp"
                app:cardElevation="0px"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="My profile"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <View
                        android:id="@+id/view13"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/background_dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/personal_info"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/my_info" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView48"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Edit my personal information"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>